# discord-usernames-checker

./: .gitignore  LICENSE  README.md  proxies.txt.example  pyproject.toml  tokens.txt.example  wordlist.txt
.github/workflows/: ci.yml
discord_username_checker/: banner.py  checker.py  cli.py  highlighter.py  mullvad.py  patterns.py  proxies.py  results.py
tests/: test_checker.py  test_cli.py  test_files.py  test_highlighter.py  test_mullvad.py  test_patterns.py
